# borrow-checker

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  tailwind.config.js  tauri.conf.json
src/: commands.rs  components.rs  git_adapter.rs  lib.rs  main.rs  structs.rs  traits.rs
src/components/: counter_btn.rs
static/: app.js  index.html  input.css  styles.css  tauri-htmx-ext.js
