[package]
name = "borrow-checker"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_lib"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
log = "0.4"
toml = "0.9"
serde = "1"
rational = {version = "1.8", features = ["serde"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

[lints.clippy]
unwrap_used = "warn"
