[package]
name = "borrow-checker"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_lib"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
git2 = { version = "0.20.3", features = ["ssh", "https"] }
log = "0.4"
maud = "0.27"
rational = {version = "1.8", features = ["serde"] }
serde = "1"
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
toml = "0.9"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
test-context = "0.5"

[lints.clippy]
unwrap_used = "warn"
